FIX - Second vuw logo showing on mobile large and smaller

--- a/src/assets/toolkit/styles/6-components/_components.site-header.scss
+++ b/src/assets/toolkit/styles/6-components/_components.site-header.scss
@@ -324,7 +324,7 @@
       }
 
       .logo { 
-        // display: none; 
+        display: none; 
         width: 12rem;
       }
 
